--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,5 +6,6 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "mcp[cli]>=1.12.2",
+    "ollama>=0.5.1",
     "requests>=2.32.4",
 ]
